--- a/src/ui/doctor/DiagnoseFrame.form
+++ b/src/ui/doctor/DiagnoseFrame.form
@@ -42,7 +42,7 @@
                       <EmptySpace min="-2" pref="290" max="-2" attributes="0"/>
                       <Component id="btnEmpty" min="-2" pref="100" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                      <Component id="btnSave1" min="-2" pref="100" max="-2" attributes="0"/>
+                      <Component id="btnSave" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -68,7 +68,7 @@
               <Component id="DiagnoseInfoPane" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnSave1" linkSize="2" min="-2" pref="37" max="-2" attributes="0"/>
+                  <Component id="btnSave" linkSize="2" min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="btnEmpty" linkSize="2" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -90,7 +90,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEmptyActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnSave1">
+    <Component class="javax.swing.JButton" name="btnSave">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/assets/about.png"/>
@@ -98,7 +98,7 @@
         <Property name="text" type="java.lang.String" value="Save"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSave1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveActionPerformed"/>
       </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="BasicInfoPane">
