--- a/src/ui/system/SystemAdminFrame.form
+++ b/src/ui/system/SystemAdminFrame.form
@@ -2,7 +2,8 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="System Admin"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -64,7 +65,7 @@
                           <Component id="btnAppointment1" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="btnAppointment" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="btnPatientManagement1" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnDoctorManagement1" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnPatientManagement" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="btnHospital" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="btnManageDoctor" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
                           <Component id="btnCommunity" linkSize="1" alignment="2" min="-2" max="-2" attributes="0"/>
@@ -83,7 +84,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnHospital" linkSize="2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btnDoctorManagement1" linkSize="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnPatientManagement" linkSize="2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnPatientManagement1" linkSize="2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -185,7 +186,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManageDoctorActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="btnDoctorManagement1">
+            <Component class="javax.swing.JButton" name="btnPatientManagement">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Helvetica Neue" size="13" style="1"/>
@@ -196,7 +197,7 @@
                 <Property name="text" type="java.lang.String" value="Patient"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDoctorManagement1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPatientManagementActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnAppointment1">
